//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

syntax = "proto3";

option java_package = "org.n52.tsf.serialization.protobuf.gen";
option java_outer_classname = "GeoProtobufCov";

message Grid {
    double xulc = 1;
    double yulc = 2;
    double x_pixel_size = 3;
    double y_pixel_size = 4;
    double x_rotation = 5;
    double y_rotation = 6;
    int32 max_width = 7;
    int32 max_hight = 8;
    string source_crs = 9;
    int32 color_space = 10;
    repeated TiePoint tie_points = 11;
    PixelScale pixel_scale = 12;
}

message TiePoint {
    repeated double value = 1;
 }

message PixelScale {
    double scale_x = 1;
    double scale_y = 2;
    double scale_z = 3;
}

 message GridWithCRS {
    repeated GridPoint gridPoints = 1;
}

message GridPoint {
    double longitude = 1;
    double latitude = 2;
}


